--- a/users/templates/users/password_reset_email.html
+++ b/users/templates/users/password_reset_email.html
@@ -1,9 +1,9 @@
-<p>Bonjour {{ user.username }},</p>
+Bonjour {{ user.username }},
 
-<p>Vous avez demandé à réinitialiser votre mot de passe. Cliquez sur le lien ci-dessous :</p>
+Vous avez demandé à réinitialiser votre mot de passe. Cliquez sur le lien ci-dessous :
 
-<p><a href="{{ reset_url }}">{{ reset_url }}</a></p>
+<a href="{{ reset_url }}">{{ reset_url }}</a>
 
-<p>Si vous n'avez pas fait cette demande, ignorez cet email.</p>
+Si vous n'avez pas fait cette demande, ignorez cet email.
 
-<p>Merci,<br>L'équipe GamerZone</p>
+Merci, L'équipe GamerZone
